tests/reference/asr-implicit2-e3c048a.stderr
semantic error: Implicit typing is not allowed, enable it by using --implicit-typing 
 --> tests/implicit2.f90:2:1
  |
2 | implicit real (a,b,c,d)
  | ^^^^^^^^^^^^^^^^^^^^^^^^ 
